[FIX] z-index problem of AboutUsCover and ConferencesAboutMe solved

--- a/src/components/AboutUsCover/styles.scss
+++ b/src/components/AboutUsCover/styles.scss
@@ -34,4 +34,8 @@ section.panambi-about-us {
   .about-us-msj {
     margin-bottom: 8px;
   }
+
+  .row:last-child .col:first-child {
+    z-index: 1;
+  }
 }
